# myVulkan

./: .gitmodules  .travis.yml  CMakeLists.txt  CompileShaders.cmake  README.md
bloom/: CMakeLists.txt  renderer.cpp  renderer.h
bloom/data/shaders/: box_filter_3x3.frag  box_filter_3x3_add.frag  box_filter_4x4.frag  passthrough.frag
cmake/: CompileShaders.cmake  Examples.cmake  HandleResources.cmake  VulkanBaseConfig.cmake.in  vulkanBaseConfig.cmake.in
data/shaders/: color.vert  color_normal.vert  color_normal_texture.vert  color_texture.frag  color_texture.vert  normal_color.vert  simple.vert
examples/: CMakeLists.txt
examples/bloom/: CMakeLists.txt  renderer.cpp  renderer.h
examples/bloom/data/shaders/: prefilter.frag
examples/depth_of_field/: CMakeLists.txt  main.cpp  renderer.cpp  renderer.h
examples/depth_of_field/data/meshes/holodeck/: holodeck.mtl
examples/depth_of_field/data/shaders/: bokeh.frag  box_filter_3x3.frag  coc.frag  combineCoc.frag  combineDoF.frag  fullscreen.vert
examples/model_loader/: CMakeLists.txt  main.cpp  simplerenderer.cpp  simplerenderer.h
examples/model_loader/data/shaders/: color_normal.vert.spv
examples/particles/: CMakeLists.txt  main.cpp  renderer.cpp  renderer.h
examples/particles/data/shaders/: base.vert  color.frag  particles.comp
game/: CMakeLists.txt  main.cpp  renderer.cpp  renderer.h
game/data/shaders/: base.vert  color.frag  height.comp
model_loader/: CMakeLists.txt  simplerenderer.cpp  simplerenderer.h
model_loader/data/shaders/: color.frag  color_normal.vert  color_texture.frag.spv
particles/: CMakeLists.txt  main.cpp  renderer.cpp  renderer.h
particles/data/shaders/: base.vert  color.frag  particles.comp
src/: main.cpp  simplerenderer.cpp  simplerenderer.h  window.cpp  window.h
src/utils/: arcball_camera.h  flythrough_camera.cpp  glm.h  hasher.h  scopedtimelog.cpp  scopedtimelog.h  statistics.cpp  statistics.h
src/vulkan/: basicrenderer.cpp  basicrenderer.h  descriptorset.cpp  descriptorset.h  device.cpp  device.h  framebuffer.cpp  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  renderpass.cpp  renderpass.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  vertexbuffer.cpp  vertexbuffer.h
texture_array/: CMakeLists.txt  main.cpp  simplerenderer.cpp  simplerenderer.h  texturearraymesh.cpp  texturearraymesh.h
texture_array/data/shaders/: color_normal.vert  color_normal_texture.vert  color_normal_texture.vert.spv  color_texture_array.frag
vulkan/: CMakeLists.txt
vulkan/data/shaders/: color.frag  color_normal.vert  color_normal_texture.vert  color_texture.frag
vulkan/include/: barrier.h  basicrenderer.h  buffer.h  bufferbase.h  commandbuffer.h  debug.h  descriptorset.h  device.h  devicedestroy.h  deviceref.h  framebuffer.h  graphicspipeline.h  handles.h  image.h  imagebase.h  imagepool.h  imageview.h  mesh.h  noncopyable.h  pipeline.h  querypool.h  queue.h  renderpass.h  resourcemanager.h  shader.h  swapchain.h  texture.h  types.h  vertexbuffer.h
vulkan/install-test/: CMakeLists.txt  main.cpp
vulkan/src/: barrier.cpp  basicrenderer.cpp  buffer.cpp  bufferbase.cpp  commandbuffer.cpp  debug.cpp  descriptorset.cpp  device.cpp  devicedestroy.cpp  deviceref.cpp  framebuffer.cpp  graphicspipeline.cpp  imagebase.cpp  imagepool.cpp  imageview.cpp  mesh.cpp  pipeline.cpp  querypool.cpp  queue.cpp  renderpass.cpp  shader.cpp  swapchain.cpp  texture.cpp  vertexbuffer.cpp  window.cpp
vulkan/test/: CMakeLists.txt  main.cpp
vulkan/utils/: arcball_camera.cpp  camerainputhandler.cpp  camerainputhandler.h  flythrough_camera.h  glm.h  gui.cpp  gui.h  hasher.h  imageloader.cpp  imageloader.h  mesh.cpp  mesh.h  meshdescription.h  mouseinputhandler.cpp  mouseinputhandler.h  objfileloader.cpp  objfileloader.h  scopedtimelog.cpp  scopedtimelog.h  statistics.cpp  statistics.h  timer.h
